[gd_scene load_steps=2 format=3 uid="uid://c9k3m8n7p5q4r"]

[ext_resource type="Script" path="res://systems/scripts/ShopUI.gd" id="1"]

[node name="ShopUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = -50.0

[node name="TopBar" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0

[node name="Title" type="Label" parent="Panel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "üè™ SHOP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelMoney" type="Label" parent="Panel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "üí∞ 0 $"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="Panel/TopBar"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "‚úñ"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = -20.0

[node name="ItemsGrid" type="GridContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3
